<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:backgroundTintMode="multiply"
    android:backgroundTint="@color/backgroundtint"
    >
    
    <LinearLayout
        android:id="@+id/li"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:textColor="@color/white"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/let_your_light_shine"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginEnd="30sp"
            android:layout_marginStart="30sp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginEnd="30sp"
            android:layout_marginStart="30sp"
            android:textColorHint="@color/white"
            app:counterOverflowTextAppearance="@color/white"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fireemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/loginemail"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_marginEnd="30sp"
            android:layout_marginStart="30sp"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/white"
            app:passwordToggleTint="@color/white"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/firepassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/firepassword"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <at.markushi.ui.CircleButton
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_marginEnd="30sp"
            android:layout_marginStart="30sp"
            android:src="@drawable/loginarrow"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="4dip"
            android:id="@+id/loginb"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forgotlogin"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="1.0"/>


</android.support.constraint.ConstraintLayout>