<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotActivity"
    android:orientation="vertical"
    android:background="@drawable/img"
    android:backgroundTint="@color/backgroundtint"
    android:backgroundTintMode="multiply">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            app:hintTextAppearance="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/forgotfireemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="30sp"
                android:layout_marginStart="30sp"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <at.markushi.ui.CircleButton
            android:id="@+id/forgotbutton"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_marginEnd="30sp"
            android:layout_marginStart="30sp"
            android:src="@drawable/loginarrow"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="4dip" />

        <TextView
            android:id="@+id/returnloginforgot"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:text="@string/loginbutton"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="100sp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>